sort product, fix overflow img productpage

--- a/project/WebNoiThat-master/src/app/product/product.component.css
+++ b/project/WebNoiThat-master/src/app/product/product.component.css
@@ -23,7 +23,7 @@
     margin: 15px 0px; 
 }
 .sidebar ul li a{
-    color: #000000;
+    /* color: #000000; */
     text-decoration: none;
     margin: 5px;
 }
@@ -50,12 +50,19 @@
     height: 30px;
     border-radius: 10px;
     border: gray 1px solid;
+    padding-left: 10px;
 }
 .sidebar button{
     width: 100%;
     /* height: 30px; */
     margin-top: 10px;
     margin-bottom: 15px;
+}
+.sidebar li:hover{
+    background-color: #000000;
+}
+.sidebar li:hover > a{
+    color: #ffffff;
 }
 .line{
     border-bottom: lightgray 1px solid;
@@ -156,6 +163,7 @@
     border: none;
     border-radius: 5px;
     height: 30px;
+    padding-left: 10px;
 }
 
 /* -------------------Khu vực hiển thị sản phẩm */
